--- a/index.html
+++ b/index.html
@@ -3,3 +3,20 @@ layout: home
 title: Hyunwoo Lee
 subtitle: Welcome my page
 ---
+
+<br/>
+
+## About me
+
+test
+
+<br/>
+
+## Contact
+
+```
+Email: 12151761@inha.edu
+Email: aslla77@naver.com 
+
+```
+
